# CHIP8Emu

./: .compile  .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  server.py  template.html
src/: chip8.cpp  chip8.hpp  main.cpp  platform.cpp  platform.hpp  table.cpp  table.hpp
testing/: test.js  test.wasm  test.wasmTEST
